<resources>
    <string name="app_name">CereKartVendorApp</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="image_action">Complete action using</string>
    <string name="please_enter_email_address">Please enter email</string>
    <string name="please_enter_valid_email_address">Please enter a valid email</string>
    <string name="please_enter_password">Password is required</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_valid_name">Full name length must be at least 3</string>
    <string name="please_enter_prod_quantity">Please enter quantity</string>
    <string name="please_enter_prod_name">Please enter name</string>
    <string name="field_required">This field is required</string>
    <string name="image_name_length">Please enter atleast 2 characters</string>
    <string name="image_desc_name_length">Description should be minimum of 40 characters</string>
    <!-- <string name="please_enter_password_valid">Please enter password with 8&#8211;16 characters, one upper case, one lower case letter, one special character and one number.</string>-->
    <string name="please_enter_password_valid">Password length must be 8&#8211;16</string>


    <string name="permission_from_device">Please provide the permission to use this feature.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="pick_what_you_want_to_get_delivered">Pick what you want to get delivered</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Your Password</u></string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="go_back_to_login"><u>Go back to Login</u></string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="service_agents">Service Agents</string>
    <string name="schedule">Schedule</string>
    <string name="coupons_offers"><![CDATA[Coupons & Offers]]></string>
    <string name="gallery">Gallery</string>
    <string name="general_settings">General Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="payment">Payment</string>
    <string name="notifications">Notifications</string>
    <string name="admin_support">Admin Support</string>
    <string name="select_date_range">Select date range</string>
    <string name="total_order_sales">Total\nOrder Sales</string>
    <string name="total_orders_placed">Total\nOrders Placed</string>
    <string name="total_products_added">Total\nProducts Added</string>
    <string name="total_ratings">Total\nRatings</string>
    <string name="total_sales_for_current_month">Total Sales for Current Month</string>
    <string name="revenue">Revenue</string>
    <string name="target">Target</string>
    <string name="achieved">Achieved</string>
    <string name="remaining">Remaining</string>
    <string name="top_users">Top Users</string>
    <string name="money_spent">Money spent</string>
    <string name="total_orders">Total Orders</string>
    <string name="products">Products</string>
    <string name="products_catalouge">Products Catalouge</string>
    <string name="add_ons">Add Ons</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="no_record_found">No Record Found</string>
    <string name="stock_management">Stock management</string>
    <string name="manage_availability">Manage Availability</string>
    <string name="add_sub_category">Add sub category</string>
    <string name="add_tax">Add Tax</string>
    <string name="add_more">Add More</string>
    <string name="category_name">Category Name</string>
    <string name="remove">- Remove</string>
    <string name="max_cat_allowed">Maximum 8 categories are allowed</string>
    <string name="upload_image">Upload Image</string>
    <string name="colour_code">Colour Code</string>
    <string name="category_image">Category Image</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="disable">Disable</string>
    <string name="delete">Delete</string>
    <string name="all_products">All Products</string>
    <string name="category">Category</string>
    <string name="sort">Sort By</string>
    <string name="item_type">Item Type</string>
    <string name="apply_tax">Apply Tax</string>
    <string name="add_photos_videos"><![CDATA[Add Photos & Videos]]></string>
    <string name="general">General</string>
    <string name="title">Title</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="specifications">Specifications</string>
    <string name="media_info">Media Info</string>
    <string name="upload">Upload</string>
    <string name="add_product">Add Product</string>
    <string name="bread">Bread</string>
    <string name="login_now">Login Now</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_name">Product Name</string>
    <string name="veg">Veg</string>
    <string name="non_veg">Non Veg</string>
    <string name="product_description">Product Description</string>
    <string name="duration">Duration(in minutes)</string>
    <string name="price">Price</string>
    <string name="included_services">Included Services</string>
    <string name="excluded_services">Excluded Services</string>
    <string name="product_image">Product Image</string>
    <string name="offer_description">Offer Description</string>
    <string name="offer">Offer(%)</string>
    <string name="offer_name">Offer Name</string>
    <string name="offer_expiry">Offer Expiry</string>
    <string name="net_price">Net Price</string>
    <string name="tax">Tax(%)</string>
    <string name="this_tax_will_be_included_once_you_checkout">This tax will be included once you checkout</string>
    <string name="choose_option">Choose Option</string>
    <string name="applicable_status">Applicable Status</string>
    <string name="product_detail">Product Detail</string>
    <string name="available_management">Available Management</string>
    <string name="description">Description</string>
    <string name="active">Active</string>
    <string name="add_category">Add Category</string>
    <string name="food_delivery" />
    <string name="valid_cat_image_size">The file size is too big (1M max).</string>
    <string name="add_to_wishlist">Add To Wishlist</string>
    <string name="add_to_cart">Add To Cart</string>

</resources>