<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/_20sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">


    <TextView
        android:id="@+id/tv_add_product"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:layout_marginStart="@dimen/_2sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_edit"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_product"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tv_disable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disable"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:gravity="center"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:gravity="center"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_disable"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>