<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/_16sdp">

    <TextView
        android:id="@+id/tv_products"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/products"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_20ssp"
        app:font="@{`bold`}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_products_catalouge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/products_catalouge"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:font="@{`regular`}"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_nav_orders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_products"/>

    <TextView
        android:id="@+id/tv_all_products"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/all_products"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:font="@{`regular`}"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_nav_orders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_products_catalouge"/>

    <TextView
        android:id="@+id/tv_add_ons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/add_ons"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:font="@{`regular`}"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_nav_orders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_all_products"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>