<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        app:hideKeyBoardOnClick="@{`back`}">

        <include
            android:id="@+id/topView"
            layout="@layout/home_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_20sdp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_begin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/_16sdp" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/_16sdp" />

                <TextView
                    android:id="@+id/tv_products"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/add_photos_videos"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_20ssp"
                    app:font="@{`bold`}"
                    app:layout_constraintEnd_toEndOf="@+id/guide_end"
                    app:layout_constraintStart_toStartOf="@+id/guide_begin"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_general"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/general"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp"
                    app:font="@{`bold`}"
                    app:layout_constraintEnd_toEndOf="@+id/guide_end"
                    app:layout_constraintStart_toStartOf="@+id/guide_begin"
                    app:layout_constraintTop_toBottomOf="@+id/tv_products" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_category_name"
                    style="@style/EditTextBackground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:hint="@string/title"
                    app:font="@{`regular`}"
                    android:inputType="textCapSentences"
                    android:maxLength="100"
                    android:maxLines="1"
                    android:nextFocusForward="@id/edt_desc"
                    android:padding="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_begin"
                    app:layout_constraintTop_toBottomOf="@+id/tv_general" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_desc"
                    style="@style/EditTextBackground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:hint="@string/please_enter_description"
                    android:maxLength="250"
                    app:font="@{`regular`}"
                    android:lines="4"
                    android:imeOptions="actionDone"
                    android:gravity="top"
                    android:padding="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_begin"
                    app:layout_constraintTop_toBottomOf="@+id/edt_category_name" />

                <TextView
                    android:id="@+id/tv_spec"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/specifications"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp"
                    app:font="@{`bold`}"
                    app:layout_constraintEnd_toEndOf="@+id/guide_end"
                    app:layout_constraintStart_toStartOf="@+id/guide_begin"
                    app:layout_constraintTop_toBottomOf="@+id/edt_desc" />

                <RelativeLayout
                    android:id="@+id/rl_tax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintStart_toStartOf="@+id/guide_begin"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintTop_toBottomOf="@+id/tv_spec"
                    android:background="@drawable/edittext_round_background">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_media_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/product_tax"
                    android:backgroundTint="@color/black" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_media_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/media_info"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp"
                    app:font="@{`bold`}"
                    app:layout_constraintEnd_toEndOf="@+id/guide_end"
                    app:layout_constraintStart_toStartOf="@+id/guide_begin"
                    app:layout_constraintTop_toBottomOf="@id/rl_tax" />
                <RelativeLayout
                    android:id="@+id/rel_upload"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/edittext_round_background"
                    app:layout_constraintEnd_toEndOf="@id/guide_end"
                    app:layout_constraintStart_toStartOf="@id/guide_begin"
                    app:layout_constraintTop_toBottomOf="@+id/tv_media_info">

                    <TextView
                        android:id="@+id/tv_upload_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableTop="@drawable/ic_settings"
                        android:drawablePadding="@dimen/_10sdp"
                        android:gravity="center"
                        android:text="@string/upload"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/_16ssp" />

                    <ImageView
                        android:id="@+id/iv_cat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_btn_dark_primary"
                    android:elevation="@dimen/_3sdp"
                    app:font="@{`bold`}"
                    android:gravity="center"
                    android:padding="@dimen/_15sdp"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="@+id/guide_begin"
                    app:layout_constraintEnd_toEndOf="@+id/guide_end"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:layout_constraintTop_toBottomOf="@+id/rel_upload"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>