<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        app:hideKeyBoardOnClick="@{`back`}">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topView"
            android:visibility="gone"
            layout="@layout/home_toolbar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_16sdp" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_16sdp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_search"
            style="@style/EditTextBackground"
            android:background="@drawable/bg_white_semi_round"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:hint="@string/search"
            android:drawableStart="@drawable/ic_search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="@dimen/_16sdp"
            app:font="@{`regular`}"
            app:layout_constraintEnd_toEndOf="@id/guide_end"
            app:layout_constraintStart_toStartOf="@id/guide_begin"
            app:layout_constraintTop_toTopOf="parent" />

       <LinearLayout
           android:visibility="gone"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:id="@+id/lin_filter"
           android:layout_marginTop="@dimen/_16sdp"
           app:layout_constraintEnd_toEndOf="@+id/guide_end"
           app:layout_constraintStart_toStartOf="@+id/guide_begin"
           app:layout_constraintTop_toBottomOf="@id/edt_search" >

           <TextView
               android:id="@+id/tv_sort"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:textSize="@dimen/_12ssp"
               android:textColor="@color/black"
               app:font="@{`regular`}"
               android:maxLines="1"
               android:ellipsize="end"
               android:drawablePadding="@dimen/_10sdp"
               android:drawableStart="@drawable/ic_nav_orders"
               android:text="@string/sort"/>

           <TextView
               android:id="@+id/tv_item"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:textSize="@dimen/_12ssp"
               android:textColor="@color/black"
               app:font="@{`regular`}"
               android:maxLines="1"
               android:ellipsize="end"
               android:drawablePadding="@dimen/_10sdp"
               android:drawableStart="@drawable/ic_nav_orders"
               android:text="@string/item_type"/>


           <TextView
               android:id="@+id/tv_category"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:textSize="@dimen/_12ssp"
               android:textColor="@color/black"
               app:font="@{`regular`}"
               android:maxLines="1"
               android:ellipsize="end"
               android:drawablePadding="@dimen/_10sdp"
               android:drawableStart="@drawable/ic_nav_orders"
               android:text="@string/category"/>

       </LinearLayout>


        <TextView
            android:id="@+id/tv_categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            app:font="@{`bold`}"
            app:layout_constraintEnd_toEndOf="@+id/guide_end"
            app:layout_constraintStart_toStartOf="@+id/guide_begin"
            app:layout_constraintTop_toBottomOf="@id/lin_filter" />

        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/rvproduct"
            recyclerViewTouch="@{`touch`}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingBottom="@dimen/_30sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guide_end"
            app:layout_constraintStart_toStartOf="@+id/guide_begin"
            app:layout_constraintTop_toBottomOf="@id/tv_categories" />

        <include
            android:id="@+id/iv_no_data_found"
            layout="@layout/layout_no_record_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>